objects/Correspondence_Review_Form__c.object
<CustomObject>
    <description>Health Discipline Correspondence Review Form - required for file documentation</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Code__c</fullName>
        <label>Billing Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N700000029GNnEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Communication Signer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000029GNsEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Statement__c</fullName>
        <defaultValue>&quot;Routine correspondence which is both considered low risk (2c or 3) for the project and has been specified authorized below, can be sent by an Approved Professional without pre-release peer review.   An Approved Professional can remit these communications directly to the client without review upon completion of this form for the project by an Equity Principal.  However, please note that the designated Project Manager must be copied on all such correspondence.&quot;</defaultValue>
        <label>Peer Review Statement</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Release_Peer_Review__c</fullName>
        <defaultValue>&quot;I have determined that prior review and approval of this correspondence is not required.&quot;</defaultValue>
        <label>1. Level 2C Risk or Lower</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Release_Peer_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Release Peer Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000029GOHEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Action_Item_Issue_Logs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Action Item/Issue Logs</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000029GQNEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000029GO2EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Correspondence Review Forms</relationshipLabel>
        <relationshipName>R00N700000029JYpEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signing_Approved_by_EP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signing Approved by (EP)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000029GOCEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Correspondence Review Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Name__c</columns>
        <columns>Billing_Code__c</columns>
        <columns>Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Correspondence Review Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>